--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     
         <div class="header">
             <div class="container">
-                <a href="index-1.html">
+                <a href="index.html">
                     <h2 class="logo text-dark mt-3">
                         Louie's web
                     </h2>
