--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     
         <div class="header">
             <div class="container">
-                <a href="index.html">
+                <a href="http://http://home_work.nctu.me/">
                     <h2 class="logo text-dark mt-3">
                         Louie's web
                     </h2>
