--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 <div class="row ">
                     <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 col-12">
                         <ul class="skill-content" style="list-style-type:none;">
-                            <li class="skill-list">
+                            <li class="skill-list mt-3">
                                 <h3 class="text-left">HTML、CSS</h3>
                                 <span class="text-left">熟悉HTML、CSS語法。</span>
                                 <div class="progress mt-2" style="height: 25px;">
@@ -61,47 +61,47 @@
                                         aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
                                 </div>
                             </li>
-                            <li class="skill-list">
+                            <li class="skill-list mt-3">
                                 <h3 class="text-left">SASS、SCSS</h3>
                                 <span class="text-left">有基礎掌握並能用在開發上。
-                                    <a href="" target="_blank">電商網站(個人作品)</a>
+                                    <a href="https://louie-chen.github.io/E-commerce/" target="_blank">電子購物網</a>
                                 </span>
                                 <div class="progress mt-2" style="height: 25px;">
                                     <div class="progress-bar bg-info" role="progressbar" style="width: 50%"
                                         aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
                                 </div>
                             </li>
-                            <li class="skill-list">
+                            <li class="skill-list mt-3">
                                 <h3 class="text-left">jQuery</h3>
                                 <span class="text-left">使用 jQuery 做出網頁動態效果，也能與 CSS 做搭配。
-                                    <a href="" target="_blank">(個人作品)</a>
+                                    <a href="https://louie-chen.github.io/jQuery/" target="_blank">jQuery網頁</a>
                                 </span>
                                 <div class="progress mt-2" style="height: 25px;">
                                     <div class="progress-bar bg-info" role="progressbar" style="width: 90%"
                                         aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
                                 </div>
                             </li>
-                            <li class="skill-list">
+                            <li class="skill-list mt-3">
                                 <h3 class="text-left">JavaScript</h3>
                                 <span class="text-left">對於變數、迴圈、函式、DOM 的操作以及 AJAX 有基礎的了解，並能應用在開發上。
-                                    <a href="" target="_blank">高雄旅遊資訊(個人作品)</a>
+                                    <a href="https://louie-chen.github.io/Louie-wed.github.io/." target="_blank">高雄旅遊資訊網、BMI試算網</a>
                                 </span>
                                 <div class="progress mt-2" style="height: 25px;">
                                     <div class="progress-bar bg-info" role="progressbar" style="width: 90%"
                                         aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
                                 </div>
                             </li>
-                            <li class="skill-list">
+                            <li class="skill-list mt-3">
                                 <h3 class="text-left">Bootstrap</h3>
                                 <span class="text-left">了解 Bootstrap 系統，能適時導入專案加快開發效率。
-                                    <a href="" target="_blank">(個人作品)</a>
+                                    <a href="https://louie-chen.github.io/Bootstrap/" target="_blank">Bootstrap電子網</a>
                                 </span>
                                 <div class="progress mt-2" style="height: 25px;">
                                     <div class="progress-bar bg-info" role="progressbar" style="width: 90%"
                                         aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
                                 </div>
                             </li>
-                            <li class="skill-list">
+                            <li class="skill-list mt-3">
                                 <h3 class="text-left">Git</h3>
                                 <span class="text-left">Git 基礎使用、將專案 push 到 GitHub，了解分支跟衝突。</span>
                                 <div class="progress mt-2" style="height: 25px;">
@@ -109,7 +109,7 @@
                                         aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
                                 </div>
                             </li>
-                            <li class="skill-list">
+                            <li class="skill-list mt-3">
                                 <h3 class="text-left">Gulp</h3>
                                 <span class="text-left">使用 Gulp 自動化編譯、壓縮檔案，增進開發效率、解決瀏覽器相容問題。</span>
                                 <div class="progress mt-2" style="height: 25px;">
@@ -126,122 +126,84 @@
             <div class="container">
                 <h2 class="title text-center">My work</h2>
                 <div class="row">
-                    <div class="col-md-12">
+                    <div class="col-md-12 mb-3">
                         <h5 class="text-left">個人作品</h5>
                     </div>
                     <div class="col-md-4 mb-3">
                         <div class="card border-0 rounded-0">
                             <div class="work-img">
-                                <img src="..." class="card-img-top" alt="...">
+                                <img src="img/BMI.jpg" class="card-img-top" alt="...">
+                                <a href="https://louie-chen.github.io/BMI/" target="_blank" class="a-link"></a>
                             </div>
                             <div class="card-body">
                                 <div class="work-use">
+                                    <p class="h6">BMI試算網</p>
                                     <i class="fa fa-tags" aria-hidden="true"></i>
-                                    <span>HTML、CSS、RWD、JavaScript</span>
+                                    <span>HTML、CSS、JavaScript</span>
                                 </div>
-                            </div>
-                        </div>
-                        <a href="" class=""></a>
-                    </div>
-                    <div class="col-md-4 mb-3">
-                        <div class="card border-0 rounded-0">
-                            <img src="..." class="card-img-top" alt="...">
-                            <div class="card-body">
-                                <p class="card-text">Some quick example text to build on the card title and make up the
-                                    bulk of the card's content.</p>
                             </div>
                         </div>
                     </div>
                     <div class="col-md-4 mb-3">
                         <div class="card border-0 rounded-0">
-                            <img src="..." class="card-img-top" alt="...">
+                            <div class="work-img">
+                                <img src="img/kon.jpg" class="card-img-top" alt="...">
+                                <a href="https://louie-chen.github.io/Louie-wed.github.io/." target="_blank" class="a-link"></a>
+                            </div>
                             <div class="card-body">
-                                <p class="card-text">Some quick example text to build on the card title and make up the
-                                    bulk of the card's content.</p>
+                                <div class="work-use">
+                                    <p class="h6">高雄旅遊資訊網</p>
+                                    <i class="fa fa-tags" aria-hidden="true"></i>
+                                    <span>HTML、CSS、JavaScript</span>
+                                </div>
                             </div>
                         </div>
                     </div>
                     <div class="col-md-4 mb-3">
                         <div class="card border-0 rounded-0">
-                            <img src="..." class="card-img-top" alt="...">
+                            <div class="work-img">
+                                <img src="img/E-c.jpg" class="card-img-top" alt="...">
+                                <a href="https://louie-chen.github.io/E-commerce/" target="_blank" class="a-link"></a>
+                            </div>
                             <div class="card-body">
-                                <p class="card-text">Some quick example text to build on the card title and make up the
-                                    bulk of the card's content.</p>
+                                <div class="work-use">
+                                    <p class="h6">電子購物網</p>
+                                    <i class="fa fa-tags" aria-hidden="true"></i>
+                                    <span>HTML、CSS、RWD、JavaScript、SCSS、Bootstrap、jQuery</span>
+                                </div>
                             </div>
                         </div>
                     </div>
                     <div class="col-md-4 mb-3">
                         <div class="card border-0 rounded-0">
-                            <img src="..." class="card-img-top" alt="...">
+                            <div class="work-img">
+                                <img src="img/bootsrarp.jpg" class="card-img-top" alt="...">
+                                <a href="https://louie-chen.github.io/Bootstrap/" target="_blank" class="a-link"></a>
+                            </div>
                             <div class="card-body">
-                                <p class="card-text">Some quick example text to build on the card title and make up the
-                                    bulk of the card's content.</p>
+                                <div class="work-use">
+                                    <p class="h6">Bootstrap電子網</p>
+                                    <i class="fa fa-tags" aria-hidden="true"></i>
+                                    <span>HTML、CSS、RWD、Bootstrap</span>
+                                </div>
                             </div>
                         </div>
                     </div>
                     <div class="col-md-4 mb-3">
                         <div class="card border-0 rounded-0">
-                            <img src="..." class="card-img-top" alt="...">
+                            <div class="work-img">
+                                <img src="img/jq.jpg" class="card-img-top" alt="...">
+                                <a href="https://louie-chen.github.io/jQuery/" target="_blank" class="a-link"></a>
+                            </div>
                             <div class="card-body">
-                                <p class="card-text">Some quick example text to build on the card title and make up the
-                                    bulk of the card's content.</p>
+                                <div class="work-use">
+                                    <p class="h6">jQuery網頁</p>
+                                    <i class="fa fa-tags" aria-hidden="true"></i>
+                                    <span>HTML、CSS、jQuery</span>
+                                </div>
                             </div>
                         </div>
                     </div>
-                    <!-- <ul class="tab-header" style="list-style-type:none;">
-                            <li class="tab-btn active" >個人作品</li>
-                        </ul>
-                        <ul style="list-style-type:none;">
-                            <li class="col-lg-4 col-md-4 col-xs-12 col-12">
-                                <a href="" target="_blank"></a>
-                                <h4></h4>
-                                <div class="work-use">
-                                    <i class="fa fa-tags" aria-hidden="true"></i>
-                                    <span>HTML、CSS、RWD、JavaScript</span>
-                                </div>
-                            </li>
-                            <li class="col-lg-4 col-md-4 col-xs-12 col-12">
-                                <a href="" target="_blank"></a>
-                                <h4></h4>
-                                <div class="work-use">
-                                    <i class="fa fa-tags" aria-hidden="true"></i>
-                                    <span>HTML、CSS、RWD、JavaScript</span>
-                                </div>
-                            </li>
-                            <li class="col-lg-4 col-md-4 col-xs-12 col-12">
-                                <a href="" target="_blank"></a>
-                                <h4></h4>
-                                <div class="work-use">
-                                    <i class="fa fa-tags" aria-hidden="true"></i>
-                                    <span>HTML、CSS、RWD、JavaScript</span>
-                                </div>
-                            </li>
-                            <li class="col-lg-4 col-md-4 col-xs-12 col-12">
-                                <a href="" target="_blank"></a>
-                                <h4></h4>
-                                <div class="work-use">
-                                    <i class="fa fa-tags" aria-hidden="true"></i>
-                                    <span>HTML、CSS、RWD、JavaScript</span>
-                                </div>
-                            </li>
-                            <li class="col-lg-4 col-md-4 col-xs-12 col-12">
-                                <a href="" target="_blank"></a>
-                                <h4></h4>
-                                <div class="work-use">
-                                    <i class="fa fa-tags" aria-hidden="true"></i>
-                                    <span>HTML、CSS、RWD、JavaScript</span>
-                                </div>
-                            </li>
-                            <li class="col-lg-4 col-md-4 col-xs-12 col-12">
-                                <a href="" target="_blank"></a>
-                                <h4></h4>
-                                <div class="work-use">
-                                    <i class="fa fa-tags" aria-hidden="true"></i>
-                                    <span>HTML、CSS、RWD、JavaScript</span>
-                                </div>
-                            </li>
-                        </ul> -->
-
                 </div>
             </div>
         </section>
@@ -261,9 +223,9 @@
                     </div>
                     <div class="col-md-6">
                         <ul  class="contact-info" style="list-style-type:none;">
-                            <li class="text-left">地址</li>
-                            <li class="text-left">電話</li>
-                            <li class="text-left">信箱</li>
+                            <li class="text-left"><i class="fas fa-map-marker-alt i-item"></i>Sanchong Dist,Taipei City, Taiwan</li>
+                            <li class="text-left"><i class="fas fa-phone-alt i-item"></i>0912532213</li>
+                            <li class="text-left"><i class="fas fa-envelope i-item"></i>sia01006@hotmail.com.tw</li>
                         </ul>
                     </div>
                 </div>
