--- a/index.html
+++ b/index.html
@@ -216,8 +216,8 @@
                     <div class="col-md-6">
                         <a href="index.html"><h2 class="logo text-dark text-center">Louie's web</h2></a>
                         <ul class="contact-link" style="list-style-type:none;">
-                            <li class="footer-list"><a href="">F</a></li>
-                            <li class="footer-list"><a href="">M</a></li>
+                            <li class="footer-list"><a href="https://www.facebook.com/profile.php?id=100000597175201" target="_blank"><i class="fab fa-facebook-f fa-active"></i></a></li>
+                            <li class="footer-list"><a href="index.html"><i class="fab fa-medium-m fa-active"></i></a></li>
                             <li></li>
                         </ul>
                     </div>
