--- a/index.html
+++ b/index.html
@@ -24,17 +24,17 @@
     <div class="main">
         <section class="section py-5" id="about">
             <div class="container">
-                <h2 class="title text-center">Abuot me</h2>
-                <div class="row mt-3">
+                <h2 class="title text-center">About me</h2>
+                <div class="row mt-4">
                     <div class="col-lg-4 col-md-4 col-sm12 col-xs-12 col-12">
-                        <div class="abuot-pic">
-                            <img src="img/IMG_0289.JPG" class="pic" alt="">
+                        <div class="about-pic">
+                            <img src="img/im.jpg" class="img-fluid pic" alt="">
                         </div>
                     </div>
                     <div class="col-lg-8 col-md-8 col-sm12 col-xs-12 col-12">
-                        <div class="abuot-text">
+                        <div class="about-text">
                             <h2>陳奕志(CHEN YI-CHIH)</h2>
-                            <p class="pr-5">
+                            <p class="">
                                 大家好，我叫陳奕志，畢業於龍華科技大學機械工程系，退伍後先在醫療產領域工作，後來在一些機會下接觸到了網頁前端，在這個領域嘗試後，覺得前端是一個很迷人的領域，程式碼給我們的回饋很快速，在畫面就能知道很多訊息。之後就開始埋首在
                                 HTML、CSS、JavaScript、jQuery 的程式碼內。
                                 <br>
@@ -77,7 +77,7 @@
                                     <a href="https://louie-chen.github.io/jQuery/" target="_blank">jQuery網頁</a>
                                 </span>
                                 <div class="progress mt-2" style="height: 25px;">
-                                    <div class="progress-bar bg-info" role="progressbar" style="width: 90%"
+                                    <div class="progress-bar bg-info" role="progressbar" style="width: 70%"
                                         aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
                                 </div>
                             </li>
@@ -87,7 +87,7 @@
                                     <a href="https://louie-chen.github.io/Louie-wed.github.io/." target="_blank">高雄旅遊資訊網、BMI試算網</a>
                                 </span>
                                 <div class="progress mt-2" style="height: 25px;">
-                                    <div class="progress-bar bg-info" role="progressbar" style="width: 90%"
+                                    <div class="progress-bar bg-info" role="progressbar" style="width: 70%"
                                         aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
                                 </div>
                             </li>
@@ -97,7 +97,7 @@
                                     <a href="https://louie-chen.github.io/Bootstrap/" target="_blank">Bootstrap電子網</a>
                                 </span>
                                 <div class="progress mt-2" style="height: 25px;">
-                                    <div class="progress-bar bg-info" role="progressbar" style="width: 90%"
+                                    <div class="progress-bar bg-info" role="progressbar" style="width: 80%"
                                         aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
                                 </div>
                             </li>
