--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
                     <div class="col-md-4 mb-3">
                         <div class="card border-0 rounded-0">
                             <div class="work-img">
-                                <img src="img/BMI.jpg" class="card-img-top" alt="...">
+                                <img src="img/BMI-I.jpg" class="card-img-top" alt="...">
                                 <a href="https://louie-chen.github.io/BMI/" target="_blank" class="a-link"></a>
                             </div>
                             <div class="card-body">
@@ -147,7 +147,7 @@
                     <div class="col-md-4 mb-3">
                         <div class="card border-0 rounded-0">
                             <div class="work-img">
-                                <img src="img/kon.jpg" class="card-img-top" alt="...">
+                                <img src="img/kon-I.jpg" class="card-img-top" alt="...">
                                 <a href="https://louie-chen.github.io/Louie-wed.github.io/." target="_blank" class="a-link"></a>
                             </div>
                             <div class="card-body">
