--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
                     <div class="col-md-4 mb-3">
                         <div class="card border-0 rounded-0">
                             <div class="work-img">
-                                <img src="img/E-c.jpg" class="card-img-top" alt="...">
+                                <img src="img/E-c-1.jpg" class="card-img-top" alt="...">
                                 <a href="https://louie-chen.github.io/E-commerce/" target="_blank" class="a-link"></a>
                             </div>
                             <div class="card-body">
