--- a/index.html
+++ b/index.html
@@ -102,6 +102,15 @@
                                 </div>
                             </li>
                             <li class="skill-list mt-3">
+                                <h3 class="text-left">API</h3>
+                                <span class="text-left">使用 JavaScript 匯入 json 檔案連接、並讀取及使用資料。</span>
+                                <a href="https://louie-chen.github.io/API/" target="_blank">口罩搜尋網頁</a>
+                                <div class="progress mt-2" style="height: 25px;">
+                                    <div class="progress-bar bg-info" role="progressbar" style="width: 50%"
+                                        aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
+                                </div>
+                            </li>
+                            <li class="skill-list mt-3">
                                 <h3 class="text-left">Git</h3>
                                 <span class="text-left">Git 基礎使用、將專案 push 到 GitHub，了解分支跟衝突。</span>
                                 <div class="progress mt-2" style="height: 25px;">
@@ -204,6 +213,21 @@
                             </div>
                         </div>
                     </div>
+                    <div class="col-md-4 mb-3">
+                        <div class="card border-0 rounded-0">
+                            <div class="work-img">
+                                <img src="img/API-I.jpg" class="card-img-top" alt="...">
+                                <a href="https://louie-chen.github.io/API/" target="_blank" class="a-link"></a>
+                            </div>
+                            <div class="card-body">
+                                <div class="work-use">
+                                    <p class="h6">口罩搜尋網頁</p>
+                                    <i class="fa fa-tags" aria-hidden="true"></i>
+                                    <span>HTML、CSS、jQuery、API、bootstrap、JavaScript、SCSS</span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
@@ -225,7 +249,7 @@
                         <ul  class="contact-info" style="list-style-type:none;">
                             <li class="text-left"><i class="fas fa-map-marker-alt i-item"></i>Sanchong Dist,Taipei City, Taiwan</li>
                             <li class="text-left"><i class="fas fa-phone-alt i-item"></i>0912532213</li>
-                            <li class="text-left"><i class="fas fa-envelope i-item"></i>sia01006@hotmail.com.tw</li>
+                            <li class="text-left"><i class="fas fa-envelope i-item"></i>max0100618@gmail.com.tw</li>
                         </ul>
                     </div>
                 </div>
