--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                             </li>
                             <li class="skill-list mt-3">
                                 <h3 class="text-left">API</h3>
-                                <span class="text-left">使用 JavaScript 匯入 json 檔案連接、並讀取及使用資料。</span>
+                                <span class="text-left">使用 JavaScript 匯入API，再匯入第三方 json 資料、使API與第三方資料結合達到顯示與操作資料。</span>
                                 <a href="https://louie-chen.github.io/API/" target="_blank">口罩搜尋網頁</a>
                                 <div class="progress mt-2" style="height: 25px;">
                                     <div class="progress-bar bg-info" role="progressbar" style="width: 50%"
