--- a/index.html
+++ b/index.html
@@ -54,6 +54,26 @@
                     <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 col-12">
                         <ul class="skill-content" style="list-style-type:none;">
                             <li class="skill-list mt-3">
+                                <h3 class="text-left">Vue</h3>
+                                <span class="text-left">使用Vue 框架，編寫程式。</span>
+                                <a href="https://louie-chen.github.io/my-project/" target="_blank">ST-Stroe</a>
+                                <div class="progress mt-2" style="height: 25px;">
+                                    <div class="progress-bar bg-info" role="progressbar" style="width: 80%"
+                                        aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
+                                </div>
+                            </li>
+                            <li class="skill-list mt-3">
+                                <h3 class="text-left">API</h3>
+                                <span class="text-left">使用 JavaScript 匯入API，再匯入第三方 json 資料、使API與第三方資料結合達到顯示與操作資料。</span>
+                                <a href="https://louie-chen.github.io/API/" target="_blank">口罩搜尋網頁</a>
+                                、
+                                <a href="https://louie-chen.github.io/my-project/" target="_blank">ST-Stroe</a>
+                                <div class="progress mt-2" style="height: 25px;">
+                                    <div class="progress-bar bg-info" role="progressbar" style="width: 80%"
+                                        aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
+                                </div>
+                            </li>
+                            <li class="skill-list mt-3">
                                 <h3 class="text-left">HTML、CSS</h3>
                                 <span class="text-left">熟悉HTML、CSS語法。</span>
                                 <div class="progress mt-2" style="height: 25px;">
@@ -102,19 +122,10 @@
                                 </div>
                             </li>
                             <li class="skill-list mt-3">
-                                <h3 class="text-left">API</h3>
-                                <span class="text-left">使用 JavaScript 匯入API，再匯入第三方 json 資料、使API與第三方資料結合達到顯示與操作資料。</span>
-                                <a href="https://louie-chen.github.io/API/" target="_blank">口罩搜尋網頁</a>
-                                <div class="progress mt-2" style="height: 25px;">
-                                    <div class="progress-bar bg-info" role="progressbar" style="width: 50%"
-                                        aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
-                                </div>
-                            </li>
-                            <li class="skill-list mt-3">
                                 <h3 class="text-left">Git</h3>
-                                <span class="text-left">Git 基礎使用、將專案 push 到 GitHub，了解分支跟衝突。</span>
+                                <span class="text-left">Git 基礎使用、將專案 push 到 GitHub。</span>
                                 <div class="progress mt-2" style="height: 25px;">
-                                    <div class="progress-bar bg-info" role="progressbar" style="width: 50%"
+                                    <div class="progress-bar bg-info" role="progressbar" style="width: 60%"
                                         aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
                                 </div>
                             </li>
@@ -122,7 +133,7 @@
                                 <h3 class="text-left">Gulp</h3>
                                 <span class="text-left">使用 Gulp 自動化編譯、壓縮檔案，增進開發效率、解決瀏覽器相容問題。</span>
                                 <div class="progress mt-2" style="height: 25px;">
-                                    <div class="progress-bar bg-info" role="progressbar" style="width: 50%"
+                                    <div class="progress-bar bg-info" role="progressbar" style="width: 60%"
                                         aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
                                 </div>
                             </li>
@@ -224,6 +235,21 @@
                                     <p class="h6">口罩搜尋網頁</p>
                                     <i class="fa fa-tags" aria-hidden="true"></i>
                                     <span>HTML、CSS、jQuery、API、bootstrap、JavaScript、SCSS</span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-4 mb-3">
+                        <div class="card border-0 rounded-0">
+                            <div class="work-img">
+                                <img src="img/電商-I.jpg" class="card-img-top" alt="...">
+                                <a href="https://louie-chen.github.io/my-project/" target="_blank" class="a-link"></a>
+                            </div>
+                            <div class="card-body">
+                                <div class="work-use">
+                                    <p class="h6">ST-Stroe</p>
+                                    <i class="fa fa-tags" aria-hidden="true"></i>
+                                    <span>HTML、CSS、jQuery、API、bootstrap、JavaScript、SCSS、Vue</span>
                                 </div>
                             </div>
                         </div>
