--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                         <ul class="skill-content" style="list-style-type:none;">
                             <li class="skill-list mt-3">
                                 <h3 class="text-left">Vue</h3>
-                                <span class="text-left">使用Vue 框架，編寫程式。</span>
+                                <span class="text-left">使用Vue框架，編寫程式，並運用Vue-router、Vue-Cli3製作網頁</span>
                                 <a href="https://louie-chen.github.io/my-project/" target="_blank">ST-Stroe</a>
                                 <div class="progress mt-2" style="height: 25px;">
                                     <div class="progress-bar bg-info" role="progressbar" style="width: 80%"
@@ -249,7 +249,7 @@
                                 <div class="work-use">
                                     <p class="h6">ST-Stroe</p>
                                     <i class="fa fa-tags" aria-hidden="true"></i>
-                                    <span>HTML、CSS、jQuery、API、bootstrap、JavaScript、SCSS、Vue</span>
+                                    <span>HTML、CSS、jQuery、API、bootstrap、JavaScript、SCSS、Vue、Vue-router、Vue-Cli3</span>
                                 </div>
                             </div>
                         </div>
